# eopsparser-template-engine

./: .gitignore  .gitmodules  .npmignore  .npmrc  CMakeLists.txt  binding.gyp  index.d.ts  index.js  package.json
assets/AWSAssets/: InstanceType.json
assets/AzureAssets/: AzureAvailabilityZones.json
src/: handler.cpp  main.cpp  main.hpp
src/Helpers/: helperFunctions.cpp  helperFunctions.hpp
src/Helpers/Http/: OpenMapAPI.cpp  OpenMapAPI.hpp
src/Models/: EOPSTemplate.cpp  EOPSTemplate.hpp
src/Models/AWS/: CloudFormationTemplate.cpp  CloudFormationTemplate.hpp  GenericAWSOutput.cpp  GenericAWSOutput.hpp  GenericAWSResource.cpp  GenericAWSResource.hpp
src/Models/AWS/EC2/: EC2.cpp  EC2.hpp  ElasticGPUAccelerator.hpp  InstanceType.cpp  InstanceType.hpp
src/Models/AWS/EC2/Assets/: AvailabilityZoneLocations.json  AwsOSAMICache.json  InstanceType.json
src/Models/Azure/: AzureResourceManagerTemplate.cpp  AzureResourceManagerTemplate.hpp  GenericAzureOutput.cpp  GenericAzureOutput.hpp  GenericAzureResource.cpp  GenericAzureResource.hpp
src/Models/Azure/Compute/: HardwareProfile.cpp  HardwareProfile.hpp  StorageProfile.cpp  StorageProfile.hpp  VirtualMachine.cpp  VirtualMachine.hpp
src/Models/Azure/Compute/Assets/: AzureAvailabilityZones.json  LinuxInstanceType.json  OsImages.json  WindowsInstanceType.json
src/Models/Generics/: AZLocation.cpp  AZLocation.hpp  GenericTemplate.hpp  InstanceType.cpp  InstanceType.hpp
